--- a/package.json
+++ b/package.json
@@ -12,15 +12,13 @@
     "dev:full": "concurrently \"npm run server\" \"npm run dev\""
   },
   "dependencies": {
-    "@stripe/stripe-js": "^5.5.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.2",
     "react": "^19.2.0",
     "react-day-picker": "^9.2.1",
     "react-dom": "^19.2.0",
-    "react-router-dom": "^7.2.0",
-    "stripe": "^17.5.0"
+    "react-router-dom": "^7.2.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
